--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.davi</groupId>
-    <artifactId>shop</artifactId>
+    <artifactId>test</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>shop</name>
+    <name>test</name>
     <description>E-Commerce web application</description>
     <properties>
         <java.version>17</java.version>
